# sherlock

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  TODO.md  build.rs  flake.nix  packager.sh  release.sh  resources.gresources  rust-toolchain.toml
.github/scripts/: label-issue.js
.github/workflows/: build.yml  docs.yml  label-issues.yml  release.yml
assets/: fallback.json
docs/: README.md  aliases.md  book.toml  config.md  flags.md  getting-started.md  launchers.md  sherlockignore.md
docs/examples/: config.json  config.toml  fallback.json
docs/features/: actions.md  api.md  daemonizing.md  piping.md
docs/patchnotes/: new_version.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v1.0.0.md
docs/src/: SUMMARY.md  launchers.md  variable-inputs.md
nix/: home-manager.nix
resources/: emojies.json  fallback.json  main.css  resources.gresources.xml
resources/ui/: event_tile.ui  grid_search.ui  input_window.ui  search.ui  timer_tile.ui  weather_tile.ui  window.ui
sherlock_macro/: Cargo.toml
sherlock_macro/src/: lib.rs
src/: app.rs  launcher.rs  loader.rs  main.rs  prelude.rs  tokio_utils.rs  ui.rs  utils.rs
src/actions/: applaunch.rs  commandlaunch.rs  mod.rs  teamslaunch.rs  util.rs  websearch.rs
src/api/: api.rs  call.rs  server.rs
src/app/: bindings.rs  mod.rs  theme.rs  updates.rs
src/application/: lock.rs
src/daemon/: daemon.rs
src/g_subclasses/: mod.rs
src/g_subclasses/action_entry/: imp.rs  mod.rs
src/g_subclasses/basic/: imp.rs  mod.rs
src/g_subclasses/emoji_action_entry/: imp.rs  mod.rs
src/g_subclasses/emoji_item/: imp.rs  mod.rs
src/g_subclasses/lazy_model/: imp.rs  mod.rs
src/g_subclasses/sherlock_row/: imp.rs  mod.rs
src/g_subclasses/tile_item/: imp.rs  mod.rs
src/launcher/: app_launcher.rs  audio_launcher.rs  bookmark_launcher.rs  bulk_text_launcher.rs  calc_launcher.rs  category_launcher.rs  clipboard_launcher.rs  coupled_launcher.rs  dmenu_launcher.rs  emoji_launcher.rs  emoji_picker.rs  event_launcher.rs  file_launcher.rs  message_launcher.rs  mod.rs  pipe_launcher.rs  pomodoro_launcher.rs  process_launcher.rs  system_cmd_launcher.rs  theme_picker.rs  translator_launcher.rs  utils.rs  variant_type.rs  weather_launcher.rs  web_launcher.rs
src/launcher/calc_launcher/: currency.rs  trading_view_api.rs
src/launcher/children/: app_data.rs  calc_data.rs  clip_data.rs  emoji_data.rs  event_data.rs  file_data.rs  message.rs  mod.rs  mpris_data.rs  script_data.rs  weather_data.rs
src/launcher/emoji_launcher/: data.rs  mod.rs
src/launcher/weather_launcher/: utils.rs  wttr_serde.rs
src/loader/: application_loader.rs  css_loader.rs  flag_loader.rs  icon_loader.rs  launcher_loader.rs  mod.rs  pipe.rs  pipe_loader.rs  setup.rs  util.rs  utils.rs
src/loader/icon/: cache.rs  mod.rs  render.rs  theme.rs
src/ui/: context.rs  error_view.rs  event_port.rs  key_actions.rs  launcher.rs  mod.rs  model.rs  search.rs  search_bar.rs  util.rs  utils.rs  widgets.rs  window.rs
src/ui/entry/: imp.rs  mod.rs
src/ui/error/: error_box.rs  mod.rs  view.rs  window.rs
src/ui/g_templates/: api_tile.rs  app_tile.rs  arg_bar.rs  calc_tile.rs  error_tile.rs  event_tile.rs  grid_search.rs  input_window.rs  mod.rs  search.rs  timer_tile.rs  weather_tile.rs  window.rs
src/ui/launcher/: actions.rs  context_menu.rs  mod.rs  render.rs  views.rs
src/ui/main_window/: actions.rs  mod.rs  render.rs
src/ui/model/: emoji.rs  file.rs  home.rs  message.rs  mod.rs
src/ui/search_bar/: actions.rs  builder.rs  mod.rs
src/ui/tiles/: api_tile.rs  app_tile.rs  bulk_text_tile.rs  calc_tile.rs  (+11 more)
src/utils/: cache.rs  clipboard.rs  command_launch.rs  config.rs  errors.rs  errorsss.rs  files.rs  intent.rs  logging.rs  mod.rs  networking.rs  paths.rs  websearch.rs
themes/: gruvbox.css  gruvbox2.css  whiteout.css
(+44 files in other folders)
