[package]
name = "sherlock"
authors = ["Sebastian Kootz"]
version = "0.1.14"
edition = "2024"
readme = "README.md"

build = "build.rs"

[dependencies]
sherlock_macro = { path = "./sherlock_macro" }
gio = "0.21.5"
glob = "0.3.3"
gtk4 = { version = "^0.10.3", features = ["v4_6", "v4_12"] }
gtk4-layer-shell = "0.7.1"
meval = "0.2.0"
nix = { version = "0.30.1", features = ["fs", "process", "signal"] }
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
simd-json = "0.17.0"
rusqlite = "0.38.0"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["blocking"] }
gdk-pixbuf = "0.21.5"
bytes = "1.11.0"
cli-clipboard = "0.4.0"
zbus = "5.12.0"
procfs = "0.18.0"
async-channel = "2.5.0"
async-std = "1.13.2"
futures = "0.3.31"
levenshtein = "1.0.5"
xdg = "3.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
libc = "0.2.179"

[package.metadata]
assets = ["resources/*"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[dev-dependencies]
criterion = "0.3"
