[package]
name = "sherlock-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bincode = {version = "2.0.1", features = ["serde"]}
bytes = "1.11.0"
chrono = {version = "0.4.43", features=["serde"]}
freedesktop-icons = "0.4.0"
futures = "0.3.31"
glob = "0.3.3"
# Use the git version to get the latest Linux/Wayland patches
gpui = { git = "https://github.com/zed-industries/zed", rev = "062ae00294e26a68aaa04c0e6fd419b35cf8f3c7" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "062ae00294e26a68aaa04c0e6fd419b35cf8f3c7" }
suite-223b = { path = "/home/basti/watson/crates/suite-223b"}
image = "0.25.9"
levenshtein = "1.0.5"
libc = "0.2.180"
memchr = "2.7.6"
meval = "0.2.0"
nix = "0.31.2"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = "0.13.1"
resvg = "0.46.0"
rusqlite = "0.38.0"
rust-embed = "8.11.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
simd-json = "0.17.0"
smallvec = "1.15.1"
strum = "0.27.2"
tiny-skia = "0.11.4"
tokio = {version = "1.49.0", features=["full"]}
toml = "0.9.11"
unicode-segmentation = "1.12.0"
usvg = "0.46.0"
wayland-client = "0.31.13"
wayland-protocols-wlr = {version = "0.3.11", features=["client"]}
xdg = "3.0.0"
zbus = "5.13.2"
walkdir = "2.5.0"
flume = "0.12.0"

[features]
default = ["wayland"]
wayland = ["gpui/wayland", "gpui_platform/wayland"]
